<resources>
    <!-- String used to display image, button, text & etc -->
    <string name="app_name">SafeHome</string>
    <string name="button_login">Log In</string>
    <string name="button_logout">Log Out</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="mode_text">Mode</string>
    <string name="mode_home">Home</string>
    <string name="mode_away">Away</string>

    <!-- Server address and script name
    <string name="raspberrypi_address">http://192.168.43.215</string>-->
    <string name="raspberrypi_address">http://192.168.0.107</string>
    <string name="stream_port">:8081</string>
    <string name="stopSurveillance">/stopCamera.py</string>
    <string name="retrieve_mode">/db_retrievemode.php</string>
    <string name="update_mode">/db_updatemode.php</string>
    <string name="retrieve_doorlatch">/db_retrievelatchstatus.php</string>
    <string name="update_doorlatch">/db_updatelatchstatus.php</string>
    <string name="retrieve_user">/db_retrieveuser.php</string>
    <string name="surveillance">/surveillance.php</string>

    <!-- Settings -->
    <string name="pref_pi_settings">Raspberry Pi Settings</string>
    <string name="pref_pi_address">Change RPi Address</string>
    <string name="pref_pi_address_summary">Change the address of the RPi.</string>

    <!-- App Bar Title -->
    <string name="action_settings">Settings</string>
    <string name="action_aboutus">About Us</string>

    <!-- Content Description -->
    <string name="startSurveillanceDesc">Start surveillance on the front door</string>
    <string name="openLatchDesc">Open the latch that is preventing the door from opening</string>
    <string name="closeLatchDesc">Close the latch that will prevent the door from opening</string>
    <string name="stopSurveillanceDesc">Stop surveillance on the front door</string>
</resources>