<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_red_dark"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fyp.imranabdulhadi.safehome.MainActivity">

    <!-- The header layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Text to display whose logged in -->
        <TextView
            android:id="@+id/text_welcome"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="start"
            android:textAlignment="viewStart"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <!-- Logout button -->
        <!--<Button
            android:id="@+id/button_logout"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@android:color/darker_gray"
            android:text="@string/button_logout"/>-->
    </RelativeLayout>

    <!-- View Application title -->
    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="90dp"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textStyle="bold"/>

    <!-- Mode switch -->
    <Switch
        android:id="@+id/switch_mode"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:layout_marginBottom="80dp"
        android:checked="false"
        android:text="@string/mode_text"
        android:textOff="@string/mode_home"
        android:textOn="@string/mode_away"/>

    <!-- Layout to store all the button functionality -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Button to start surveillance -->
        <ImageButton
            android:id="@+id/btnStartSurveillance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/startSurveillanceDesc"
            android:src="@drawable/start_surveillance"/>
    </RelativeLayout>
</LinearLayout>
